@@ -1,183 +1,433 @@
 package com.assessment;
 
 import org.junit.jupiter.api.Test;
-import static org.junit.jupiter.api.Assertions.*;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
 
 import java.util.*;
+import java.util.stream.Stream;
+
+import static org.junit.jupiter.api.Assertions.*;
 
 public class SummativeTest {
 
-    // ============================================================
-    // Question 1 - batchApiDispatcher tests
-    // ============================================================
+    /* =========================================================
+                       QUESTION 1
+       ========================================================= */
 
-    @Test
-    void batchApiDispatcher_emptyList_returnsEmpty() {
-        assertEquals(Collections.emptyList(), Summative.batchApiDispatcher(new ArrayList<>()));
-    }
+    static Stream<Object[]> batchApiDispatcherLogicData() {
 
-    @Test
-    void batchApiDispatcher_null_returnsEmpty() {
-        assertEquals(Collections.emptyList(), Summative.batchApiDispatcher(null));
-    }
+        return Stream.of(
 
-    @Test
-    void batchApiDispatcher_lessThanFive_returnsSingleBatch() {
-        List<String> ids = Arrays.asList("ID1", "ID2", "ID3");
-        List<List<String>> expected = Arrays.asList(Arrays.asList("ID1", "ID2", "ID3"));
-        assertEquals(expected, Summative.batchApiDispatcher(ids));
-    }
+                new Object[]{
+                        List.of("ID1","ID2","ID3","ID4","ID5","ID6","ID7"),
+                        List.of(
+                                List.of("ID1","ID2","ID3","ID4","ID5"),
+                                List.of("ID6","ID7")
+                        )
+                },
 
-    @Test
-    void batchApiDispatcher_exactlyFive_returnsSingleBatch() {
-        List<String> ids = Arrays.asList("ID1", "ID2", "ID3", "ID4", "ID5");
-        List<List<String>> expected = Arrays.asList(Arrays.asList("ID1", "ID2", "ID3", "ID4", "ID5"));
-        assertEquals(expected, Summative.batchApiDispatcher(ids));
-    }
+                new Object[]{
+                        List.of("ID1","ID2","ID3","ID4","ID5"),
+                        List.of(
+                                List.of("ID1","ID2","ID3","ID4","ID5")
+                        )
+                },
 
-    @Test
-    void batchApiDispatcher_moreThanFive_returnsTwoBatches() {
-        List<String> ids = Arrays.asList("ID1", "ID2", "ID3", "ID4", "ID5", "ID6", "ID7");
-        List<List<String>> expected = Arrays.asList(
-            Arrays.asList("ID1", "ID2", "ID3", "ID4", "ID5"),
-            Arrays.asList("ID6", "ID7")
+                new Object[]{
+                        List.of("ID1","ID2","ID3","ID4","ID5","ID6","ID7","ID8","ID9","ID10"),
+                        List.of(
+                                List.of("ID1","ID2","ID3","ID4","ID5"),
+                                List.of("ID6","ID7","ID8","ID9","ID10")
+                        )
+                },
+
+                new Object[]{
+                        List.of("ID1","ID2","ID3"),
+                        List.of(List.of("ID1","ID2","ID3"))
+                },
+
+                new Object[]{
+                        List.of("ID1"),
+                        List.of(List.of("ID1"))
+                },
+
+                new Object[]{
+                        List.of(),
+                        List.of()
+                },
+
+                new Object[]{
+                        List.of("1","2","3","4","5","6"),
+                        List.of(
+                                List.of("1","2","3","4","5"),
+                                List.of("6")
+                        )
+                },
+
+                new Object[]{
+                        List.of("ID10","ID5","ID3","ID8","ID1","ID7"),
+                        List.of(
+                                List.of("ID10","ID5","ID3","ID8","ID1"),
+                                List.of("ID7")
+                        )
+                }
+
         );
-        assertEquals(expected, Summative.batchApiDispatcher(ids));
     }
 
-    // ... (repeat with more cases to cover 50 tests for batchApiDispatcher)
+    @ParameterizedTest
+    @MethodSource("batchApiDispatcherLogicData")
+    void testBatchApiDispatcherLogic(List<String> inputIds,
+                                     List<List<String>> expectedOutput){
 
-    // ============================================================
-    // Question 2 - winningStreak tests
-    // ============================================================
+        assertEquals(expectedOutput,
+                Summative.batchApiDispatcher(inputIds));
 
-    @Test
-    void winningStreak_empty_returnsZero() {
-        assertEquals(0, Summative.winningStreak(new ArrayList<>()));
     }
 
+
     @Test
-    void winningStreak_noWins_returnsZero() {
-        List<String> results = Arrays.asList("L", "L", "L");
-        assertEquals(0, Summative.winningStreak(results));
+    void testBatchApiDispatcherConstraintEnforced(){
+
+        List<String> ids = new ArrayList<>();
+
+        for(int i=1;i<50;i++){
+            ids.add("ID"+i);
+        }
+
+        List<List<String>> result = Summative.batchApiDispatcher(ids);
+
+        for(List<String> batch : result){
+            assertTrue(batch.size() <= 5);
+        }
     }
 
+
     @Test
-    void winningStreak_singleWin_returnsOne() {
-        List<String> results = Arrays.asList("W");
-        assertEquals(1, Summative.winningStreak(results));
+    void testBatchApiDispatcherNoDataLoss(){
+
+        List<String> ids = new ArrayList<>();
+
+        for(int i=1;i<23;i++){
+            ids.add("ID"+i);
+        }
+
+        List<List<String>> result = Summative.batchApiDispatcher(ids);
+
+        List<String> flattened = new ArrayList<>();
+
+        for(List<String> batch: result){
+            flattened.addAll(batch);
+        }
+
+        assertEquals(ids, flattened);
     }
 
+
     @Test
-    void winningStreak_multipleStreaks_returnsLongest() {
-        List<String> results = Arrays.asList("W", "L", "W", "W", "L", "W", "W", "W");
-        assertEquals(3, Summative.winningStreak(results));
+    void testBatchApiDispatcherNoDuplicates(){
+
+        List<String> ids = new ArrayList<>();
+
+        for(int i=1;i<18;i++){
+            ids.add("ID"+i);
+        }
+
+        List<List<String>> result = Summative.batchApiDispatcher(ids);
+
+        List<String> flattened = new ArrayList<>();
+
+        for(List<String> batch: result){
+            flattened.addAll(batch);
+        }
+
+        assertEquals(flattened.size(),
+                new HashSet<>(flattened).size());
     }
 
-    // ... (repeat with more cases to cover 50 tests for winningStreak)
-
-    // ============================================================
-    // Question 3 - peakFinder tests
-    // ============================================================
 
     @Test
-    void peakFinder_empty_returnsEmpty() {
-        assertEquals(Collections.emptyList(), Summative.peakFinder(new ArrayList<>()));
+    void testBatchApiDispatcherOrderPreserved(){
+
+        List<String> ids = new ArrayList<>();
+
+        for(int i=100;i<115;i++){
+            ids.add("ID"+i);
+        }
+
+        List<List<String>> result = Summative.batchApiDispatcher(ids);
+
+        List<String> flattened = new ArrayList<>();
+
+        for(List<String> batch: result){
+            flattened.addAll(batch);
+        }
+
+        assertEquals(ids, flattened);
     }
 
+
     @Test
-    void peakFinder_shortList_returnsEmpty() {
-        assertEquals(Collections.emptyList(), Summative.peakFinder(Arrays.asList(30, 32)));
+    void testBatchApiDispatcherReturnsListOfLists(){
+
+        List<List<String>> result =
+                Summative.batchApiDispatcher(
+                        List.of("ID1","ID2","ID3","ID4","ID5","ID6")
+                );
+
+        assertTrue(result instanceof List);
+
+        for(List<String> batch : result){
+            assertTrue(batch instanceof List);
+        }
     }
 
+
     @Test
-    void peakFinder_singlePeak_returnsCorrect() {
-        List<Integer> temps = Arrays.asList(30, 32, 31);
-        assertEquals(Arrays.asList(32), Summative.peakFinder(temps));
+    void testBatchApiDispatcherEmptyReturnsList(){
+
+        List<List<String>> result =
+                Summative.batchApiDispatcher(List.of());
+
+        assertEquals(List.of(), result);
     }
 
+
     @Test
-    void peakFinder_multiplePeaks_returnsAllPeaks() {
-        List<Integer> temps = Arrays.asList(30, 32, 31, 35, 33, 36, 34);
-        assertEquals(Arrays.asList(32, 35, 36), Summative.peakFinder(temps));
+    void testBatchApiDispatcherImmutability(){
+
+        List<String> original =
+                new ArrayList<>(List.of("A","B","C","D","E","F"));
+
+        List<String> copy =
+                new ArrayList<>(original);
+
+        Summative.batchApiDispatcher(original);
+
+        assertEquals(copy, original);
     }
 
-    // ... (repeat with more cases to cover 30 tests for peakFinder)
-
-    // ============================================================
-    // Question 4 - stageSummary tests
-    // ============================================================
 
     @Test
-    void stageSummary_empty_returnsEmpty() {
-        assertEquals(Collections.emptyMap(), Summative.stageSummary(new ArrayList<>()));
+    void testBatchApiDispatcherLargeScale(){
+
+        List<String> largeInput = new ArrayList<>();
+
+        for(int i=0;i<10000;i++){
+            largeInput.add("ID"+i);
+        }
+
+        List<List<String>> result =
+                Summative.batchApiDispatcher(largeInput);
+
+        assertEquals(2000,result.size());
+
+        for(List<String> batch: result){
+            assertEquals(5,batch.size());
+        }
+
+        List<String> flattened = new ArrayList<>();
+
+        for(List<String> batch: result){
+            flattened.addAll(batch);
+        }
+
+        assertEquals(largeInput, flattened);
     }
 
-    @Test
-    void stageSummary_singleRecord_returnsSingleStage() {
-        List<Map<String, Object>> records = new ArrayList<>();
-        Map<String, Object> rec = new HashMap<>();
-        rec.put("stage", 2);
-        rec.put("duration_hours", 2.5);
-        records.add(rec);
-        Map<String, Double> expected = new HashMap<>();
-        expected.put("Stage 2", 2.5);
-        assertEquals(expected, Summative.stageSummary(records));
-    }
 
-    @Test
-    void stageSummary_multipleRecords_returnsSummed() {
-        List<Map<String, Object>> records = new ArrayList<>();
-        Map<String, Object> r1 = new HashMap<>();
-        r1.put("stage", 2); r1.put("duration_hours", 2.5);
-        Map<String, Object> r2 = new HashMap<>();
-        r2.put("stage", 4); r2.put("duration_hours", 4.0);
-        Map<String, Object> r3 = new HashMap<>();
-        r3.put("stage", 2); r3.put("duration_hours", 1.5);
-        records.addAll(Arrays.asList(r1, r2, r3));
-        Map<String, Double> expected = new HashMap<>();
-        expected.put("Stage 2", 4.0);
-        expected.put("Stage 4", 4.0);
-        assertEquals(expected, Summative.stageSummary(records));
-    }
+    /* =========================================================
+                       QUESTION 2
+       ========================================================= */
 
-    // ... (repeat with more cases to cover 30 tests for stageSummary)
+    static Stream<Object[]> winningStreakLogicData(){
 
-    // ============================================================
-    // Question 5 - drawTriangle tests
-    // ============================================================
+        return Stream.of(
 
-    @Test
-    void drawTriangle_height1_returnsSingleStar() {
-        assertEquals(Arrays.asList("*"), Summative.drawTriangle(1));
-    }
+                new Object[]{List.of(),0},
+                new Object[]{List.of("L"),0},
+                new Object[]{List.of("W"),1},
+                new Object[]{List.of("L","L","L","L","L"),0},
+                new Object[]{List.of("W","W","W","W","W"),5},
+                new Object[]{List.of("W","W","W","L","L","L"),3},
+                new Object[]{List.of("L","L","L","W","W","W"),3},
+                new Object[]{List.of("L","W","W","W","W","L"),4},
+                new Object[]{List.of("W","W","L","W","W","W","L","W","W"),3}
 
-    @Test
-    void drawTriangle_height2_returnsCorrect() {
-        List<String> expected = Arrays.asList(
-            " * ",
-            "***"
         );
-        assertEquals(expected, Summative.drawTriangle(2));
     }
+
+    @ParameterizedTest
+    @MethodSource("winningStreakLogicData")
+    void testWinningStreakLogic(List<String> results,int expected){
+
+        assertEquals(expected,
+                Summative.winningStreak(results));
+    }
+
 
     @Test
-    void drawTriangle_height5_returnsCorrect() {
-        List<String> expected = Arrays.asList(
-            "    *    ",
-            "   * *   ",
-            "  *   *  ",
-            " *     * ",
-            "*********"
-        );
-        assertEquals(expected, Summative.drawTriangle(5));
+    void testWinningStreakLargeAllWins(){
+
+        List<String> results = new ArrayList<>();
+
+        for(int i=0;i<10000;i++){
+            results.add("W");
+        }
+
+        assertEquals(10000,
+                Summative.winningStreak(results));
     }
 
-    // ... (repeat with more cases to cover 31 tests for drawTriangle)
 
-    // ============================================================
-    // Add more tests to reach 191 total
-    // ============================================================
-    // You would repeat variations (edge cases, empty lists, nulls, max/min values)
-    // for each function until all 191 tests are covered.
+    @Test
+    void testWinningStreakLargeAllLosses(){
+
+        List<String> results = new ArrayList<>();
+
+        for(int i=0;i<10000;i++){
+            results.add("L");
+        }
+
+        assertEquals(0,
+                Summative.winningStreak(results));
+    }
+
+
+    /* =========================================================
+                       QUESTION 3
+       ========================================================= */
+
+    static Stream<Object[]> peakFinderLogicData(){
+
+        return Stream.of(
+
+                new Object[]{
+                        List.of(1,3,7,1,2,6,3,2,1),
+                        List.of(7,6)
+                },
+
+                new Object[]{
+                        List.of(1,2,3,4,5),
+                        List.of()
+                },
+
+                new Object[]{
+                        List.of(9,7,5,3,1),
+                        List.of()
+                },
+
+                new Object[]{
+                        List.of(2,4,6,4,2),
+                        List.of(6)
+                }
+
+        );
+    }
+
+    @ParameterizedTest
+    @MethodSource("peakFinderLogicData")
+    void testPeakFinderLogic(List<Integer> temps,
+                             List<Integer> expected){
+
+        assertEquals(expected,
+                Summative.peakFinder(temps));
+    }
+
+
+    @Test
+    void testPeakFinderLargeScaleZigzag(){
+
+        List<Integer> temps = new ArrayList<>();
+
+        for(int i=0;i<500;i++){
+            temps.add(1);
+            temps.add(10);
+        }
+
+        temps.add(1);
+
+        List<Integer> result =
+                Summative.peakFinder(temps);
+
+        assertEquals(500,result.size());
+
+        for(int val : result){
+            assertEquals(10,val);
+        }
+    }
+
+
+    /* =========================================================
+                       QUESTION 4
+       ========================================================= */
+
+    @Test
+    void testStageSummaryEmpty(){
+
+        Map<String,Double> result =
+                Summative.stageSummary(List.of());
+
+        assertEquals(Map.of(), result);
+    }
+
+
+    @Test
+    void testStageSummarySingle(){
+
+        Map<String,Object> record = new HashMap<>();
+
+        record.put("stage",2);
+        record.put("duration_hours",2.5);
+
+        Map<String,Double> result =
+                Summative.stageSummary(List.of(record));
+
+        assertEquals(2.5,result.get("Stage 2"));
+    }
+
+
+    /* =========================================================
+                       QUESTION 5
+       ========================================================= */
+
+    static Stream<Object[]> drawTriangleData(){
+
+        return Stream.of(
+
+                new Object[]{1,List.of("*")},
+
+                new Object[]{2,List.of(
+                        " *",
+                        "***"
+                )},
+
+                new Object[]{3,List.of(
+                        "  *",
+                        " * *",
+                        "*****"
+                )}
+        );
+    }
+
+    @ParameterizedTest
+    @MethodSource("drawTriangleData")
+    void testDrawTriangleLogic(int height,
+                               List<String> expected){
+
+        assertEquals(expected,
+                Summative.drawTriangle(height));
+    }
+
+
+    @Test
+    void testDrawTriangleRowCount(){
+
+        List<String> result =
+                Summative.drawTriangle(10);
+
+        assertEquals(10,result.size());
+    }
+
 }
